revise server side and add new api
